# mavr

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
config/: default.yaml
scripts/: setup.sh  setup_parsers.py
src/: __init__.py  main.py
src/agents/: __init__.py  architecture_agent.py  base_agent.py  performance_agent.py  security_agent.py
src/analysis/: taint.py
src/features/: feature_extractor.py  feature_vector.py
src/models/: issue.py
src/parsing/: java_parser.py
src/pipeline/: pipeline.py
tests/: __init__.py
tests/test_agents/: test_architecture_agent.py  test_base_agent.py  test_performance_agent.py  test_security_agent.py
tests/test_analysis/: test_cfg.py  test_data_flow.py  test_symbol_table.py  test_taint.py
tests/test_features/: test_feature_extractor.py  test_normalizer.py
tests/test_metrics/: test_entity_metrics.py  test_structural_metrics.py
tests/test_pipeline/: test_cache.py  test_pipeline.py
