[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mavr"
version = "0.1.0"
description = "Mavr: multi-agent AI system for automated code review and refactoring"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "siamet", email = "siamet@protonmail.com"}
]
keywords = ["code-review", "refactoring", "ai", "multi-agent", "code-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Parsing
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-java>=0.20.0",
    # Backend & API
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    # Data & Graph processing
    "numpy>=1.24.0",
    "networkx>=3.0",
    "neo4j>=5.0.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    # Configuration
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # Utilities
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
# ML stack for Phase 2+ (GNN/LLM/RL agents). DGL on Linux requires its own
# wheel index — see https://www.dgl.ai/pages/start.html for install guidance.
ml = [
    "torch>=2.0.0",
    "dgl>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/siamet/mavr"

[project.scripts]
mavr = "src.main:main"

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.88.0",
    # Code quality
    "ruff>=0.8.0",
    "mypy>=1.5.0",
    "pylint>=3.0.0",
    "isort>=5.12.0",
    # Documentation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    # Development tools
    "ipython>=8.16.0",
    "ipdb>=0.13.0",
    # Type stubs
    "types-PyYAML>=6.0.0",
    "types-python-dateutil>=2.8.0",
    "types-redis>=4.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, C90: mccabe complexity
select = ["E", "F", "W", "C90"]
# E203: whitespace before ':' (defers to formatter)
# E501: line too long (handled by formatter)
# E731: do not assign a lambda expression
ignore = ["E203", "E501", "E731"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F401", "F811"]

[tool.ruff.format]
# Black-compatible defaults

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tree_sitter.*",
    "tree_sitter_languages.*",
    "dgl.*",
    "neo4j.*",
    "networkx.*",
]
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]

[tool.pylint.design]
max-args = 8
max-attributes = 12
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-returns = 6
max-statements = 60
